# portfolio-mark1

./: .env.example  .env.staging.example  .gitignore  Jenkinsfile  README.md  TODO.md  backenddockerfile  docker-compose.staging.yml  docker-compose.yml  frontdockerfile  nginx.conf
admin/: Dockerfile  next.config.js  package-lock.json  package.json
admin/src/app/: layout.tsx  page.tsx
admin/src/components/: device-preview.tsx  sidebar.tsx
admin/src/lib/: api.ts  auth-store.ts
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b158886c210e_initial_migration.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  contact.py  projects.py  skills.py
backend/app/core/: __init__.py  config.py  deps.py  email.py  security.py
backend/app/models/: __init__.py  contact.py  project.py  skill.py  user.py
backend/app/schemas/: __init__.py  contact.py  project.py  skill.py  user.py
backend/scripts/: seed.py
frontend/: .dockerignore  App.tsx  Dockerfile  app.json  babel.config.js  eas.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/projects/: [id].tsx  index.tsx
frontend/src/components/: Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Projects.tsx  Skills.tsx  index.ts
frontend/src/config/: api.ts
frontend/src/constants/: data.ts
frontend/src/hooks/: index.ts  useAppFocus.ts  useProjects.ts  useResponsive.ts  (+1 more)
(+8 files in other folders)
